--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,65 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-		<meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
+    <link rel='stylesheet' href='/stylesheets/style.css'/>
+    <link rel='stylesheet' href='http://op2mzxq2a.bkt.clouddn.com/weui.css'/>
+    <meta name="viewport"
+          content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
     <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+</head>
+<body>
+<h1><%= title %></h1>
+<p>Welcome to <%= title %></p>
+<hr>
+<p>signpackage=> <%= signPackage %></p>
+</body>
+<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+<script>
+    console.log(typeof signPackage);
+
+    var signPackage = JSON.stringify(<%= signPackage %>);
+
+    wx.config({
+        debug: true,
+        appId: signPackage.appId,
+        timestamp: signPackage.timestamp,
+        nonceStr: signPackage.nonceStr,
+        signature: signPackage.signature,
+        jsApiList: [
+            // 所有要调用的 API 都要加到这个列表中
+            "onMenuShareTimeline",
+            "onMenuShareAppMessage",
+            "onMenuShareQQ",
+            "onMenuShareWeibo",
+            "onMenuShareQZone"
+        ]
+    });
+    wx.ready(function () {
+        console.log('wx.ready');
+        wx.onMenuShareTimeline({
+            title: 'JS全栈微信开发实战', // 分享标题
+            link: window.location.href, // 分享链接
+            imgUrl: '',
+            success: function () {
+                console.log('share success');
+            },
+            cancel: function () {
+                console.log('share cancel');
+            }
+        });
+        wx.onMenuShareAppMessage({
+            title: 'JS全栈微信开发实战', // 分享标题
+            link: window.location.href, // 分享链接
+            imgUrl: '',
+            success: function () {
+                console.log('share success');
+            },
+            cancel: function () {
+                console.log('share cancel');
+            }
+        });
+    });
+</script>
 </html>
 
